/**
 *
 * This interface contains what the class Impresion must do
 *
 **/

public interface ControladorImpresion {
    public void dibujar();
}
