/**
 *
 * This interface describe what Orden class must do
 *
 * */

public interface Setlist {

    public String Orden(Headliners headliners);

}
