@startuml

title __prueba LINEUP Class Diagram__\n

  namespace Concierto{
    class Artistas {
        - Stage : String
        + Artistas()
    }
  }
  

  namespace Concierto{
    interface ControladorImpresion {
        {abstract} + dibujar()
    }
  }
  

  namespace Concierto{
    class Headliners {
        - integrantes : ArrayList<Artistas>
        - nombreBanda : String
        + Headliners()
        + getIntegrantes()
        + getNombreBanda()
        + setNombreBanda()
        + toString()
    }
  }
  

  namespace Concierto{
    class ImpresionPoster {
        - orden : int
        - screen : Screen
        + ImpresionPoster()
        + dibujar()
        + getPoster()
        + run()
        + setOrden()
        + setPoster()
    }
  }
  

  namespace Concierto{
    class Layout {
        + Orden()
    }
  }
  

  namespace Concierto{
    class Poster {
        - contenido : String[]
        - imagenes : String[]
        + Poster()
        + getContenido()
        + getImagenes()
    }
  }
  

  namespace Concierto{
    class PruebaLineUp {
        {static} + main()
        {static} + show()
    }
  }
  

  namespace Concierto{
    interface Setlist {
        {abstract} + Orden()
    }
  }
  

  namespace Concierto{
    class Stage {
        - nombre : String
        + Stage()
        + getNombre()
        + setNombre()
    }
  }
  

  Artistas -up-|> Stage
  ImpresionPoster .up.|> ControladorImpresion
  ImpresionPoster o-- Poster : poster
  Layout .up.|> Setlist


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
